--- a/AKS_AZCR_CN/MVC2_PVC.yaml
+++ b/AKS_AZCR_CN/MVC2_PVC.yaml
@@ -64,6 +64,8 @@ spec:
               value: /https/saqa_jnj_com_cn.pfx          
           name: mvc2
           image: kaiaks.azurecr.cn/azureservicedemo_mvc2:x64_from_mac
+          command: [ "/bin/sh","-c" ]
+          args: [ "dotnet MVC2.dll --urls http://0.0.0.0:5241;https://0.0.0.0:7241" ]
           volumeMounts:
             - mountPath: "/https"
               name: volume
