--- a/AKS_JJCR_CN/MVC2_PVC.yaml
+++ b/AKS_JJCR_CN/MVC2_PVC.yaml
@@ -64,8 +64,9 @@ spec:
               value: /https/saqa_jnj_com_cn.pfx
           name: mvc2
           image: jcfh-docker.artifactrepo.jnj.com/azureservicedemo_mvc2:x64_from_mac
-          command: [ "/bin/sh","-c" ]
-          args: [ "dotnet MVC2.dll --urls http://0.0.0.0:5242;https://0.0.0.0:7242" ]
+          imagePullPolicy: Always
+#          command: [ "/bin/sh","-c" ]
+#          args: [ "dotnet MVC2.dll --urls http://0.0.0.0:5242;https://0.0.0.0:7242" ]
           volumeMounts:
             - mountPath: "/https"
               name: volume
