--- a/AKS_JJCR_IC/MVC2_PVC.yaml
+++ b/AKS_JJCR_IC/MVC2_PVC.yaml
@@ -64,6 +64,7 @@ spec:
               value: /https/saqa_jnj_com_cn.pfx
           name: mvc2
           image: jcfh-docker.artifactrepo.jnj.com/azureservicedemo_mvc2:x64_from_mac
+          imagePullPolicy: Always
           command: [ "/bin/sh","-c" ]
           args: [ "dotnet MVC2.dll --urls http://0.0.0.0:5242;https://0.0.0.0:7242" ]
           volumeMounts:
